--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .vs
-src/obj/Debug/
-src/bin/Debug/
+src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0
+src/TutorialBethanysPieShop/bin/Debug/netcoreapp1.0
+src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/.IncrementalCache
+src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/TutorialBethanysPieShopdotnet-compile.deps.json
+src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/dotnet-compile-csc.rsp
+src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/dotnet-compile.rsp
