demo: Adding EF Core to Our Application
module 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/.IncrementalCache
 src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/TutorialBethanysPieShopdotnet-compile.deps.json
 src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/dotnet-compile-csc.rsp
 src/TutorialBethanysPieShop/obj/Debug/netcoreapp1.0/dotnet-compile.rsp
+src/TutorialBethanysPieShop/bin/Debug/netcoreapp1.0/TutorialBethanysPieShop.dll
+src/TutorialBethanysPieShop/bin/Debug/netcoreapp1.0/TutorialBethanysPieShop.pdb
